<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Switch
            android:id="@+id/favorita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_titulo"
            android:textOff="@string/switch_off"
            android:textOn="@string/switch_on" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tituloEstatico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linea_de"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/Descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/frecuencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequencia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/frecuenciaValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/listaParadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>